// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TokenLogo.vue [With Big Logo Size]: should be rendered correctly 1`] = `
<span
  class="token-logo token-logo--big"
  style="background-size: 100%; background-image: url(base64_image);"
/>
`;

exports[`TokenLogo.vue [With Default Props]: should be rendered correctly 1`] = `
<span
  class="token-logo token-logo--medium"
/>
`;

exports[`TokenLogo.vue [With Large Logo Size]: should be rendered correctly 1`] = `
<span
  class="token-logo token-logo--large"
  style="background-size: 100%; background-image: url(base64_image);"
/>
`;

exports[`TokenLogo.vue [With Medium (default) Logo Size]: should be rendered correctly 1`] = `
<span
  class="token-logo token-logo--medium"
  style="background-size: 100%; background-image: url(base64_image);"
/>
`;

exports[`TokenLogo.vue [With Mini Logo Size]: should be rendered correctly 1`] = `
<span
  class="token-logo token-logo--mini"
  style="background-size: 100%; background-image: url(base64_image);"
/>
`;

exports[`TokenLogo.vue [With Small Logo Size]: should be rendered correctly 1`] = `
<span
  class="token-logo token-logo--small"
  style="background-size: 100%; background-image: url(base64_image);"
/>
`;

exports[`TokenLogo.vue [With Token Symbol]: should be rendered correctly 1`] = `
<span
  class="token-logo token-logo--medium"
  style="background-size: 100%; background-image: url(base64_image);"
/>
`;
